[Metal] With Metal as GPU backend activated playback in MovieClip editor is much slower than OpenGL #105606

Closed
opened 2023-03-09 16:16:12 +01:00 by Helge Maus · 4 comments

System Information
Operating system: macOS-13.2.1-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 580 1.2

Blender Version
Broken: version: 3.5.0 Beta, branch: blender-v3.5-release, commit date: 2023-03-09 12:15, hash: dcfc9629c2f2
Worked: (newest version of Blender that worked as expected)

Short description of error
I have a regression here.
Loaded a EXR sequence (around 3GB Memory) in the MovieClip Editor for tracking.
When I have OpenGL activated as GPU backend, I get a playback speed of 30fps (realtime).
With Metal activated as GPU backend, it stutters around between 6-7fps.

Exact steps for others to reproduce the error
Start with VFX Template
Load an EXR sequence into the MovieClip Editor
Set "Scene Frames" and Framerate (30fps)
Prefetch
Press Play

**System Information** Operating system: macOS-13.2.1-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon Pro 580 1.2 **Blender Version** Broken: version: 3.5.0 Beta, branch: blender-v3.5-release, commit date: 2023-03-09 12:15, hash: `dcfc9629c2f2` Worked: (newest version of Blender that worked as expected) **Short description of error** I have a regression here. Loaded a EXR sequence (around 3GB Memory) in the MovieClip Editor for tracking. When I have OpenGL activated as GPU backend, I get a playback speed of 30fps (realtime). With Metal activated as GPU backend, it stutters around between 6-7fps. **Exact steps for others to reproduce the error** Start with VFX Template Load an EXR sequence into the MovieClip Editor Set "Scene Frames" and Framerate (30fps) Prefetch Press Play
Helge Maus added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-09 16:16:13 +01:00

An addition to that:
I have the feeling, that the whole MovieClip Editor display is much slower that with OpenGL or in 3.4.1 . Paning the view around is one example ... Seems to be a problem with the viewer itself ...

An addition to that: I have the feeling, that the whole MovieClip Editor display is much slower that with OpenGL or in 3.4.1 . Paning the view around is one example ... Seems to be a problem with the viewer itself ...
Helge Maus changed title from [Metal] With Metal as GPU backend activated playback im MovieClip editor is slower than OpenGL to [Metal] With Metal as GPU backend activated playback in MovieClip editor is much slower than OpenGL 2023-03-11 13:43:37 +01:00

I can have a look into this, perhaps hitting a slow path with AMD-based GPUs as a few of the texture update paths are optimized for Unified-memory-architecture in Metal, but this could result in slower flushes on discrete memory systems, which could explain slow video playback.

I can have a look into this, perhaps hitting a slow path with AMD-based GPUs as a few of the texture update paths are optimized for Unified-memory-architecture in Metal, but this could result in slower flushes on discrete memory systems, which could explain slow video playback.

@Michael-Parkin-White-Apple Thanks a lot. As also written before, it's not only in Playback situations, also when paning the frame around mit MMB.

@Michael-Parkin-White-Apple Thanks a lot. As also written before, it's not only in Playback situations, also when paning the frame around mit MMB.

Have a fix coming in for this soon :)

Have a fix coming in for this soon :)
Germano Cavalcante added
Module
EEVEE & Viewport
Status
Confirmed
Interest
Metal
and removed
Status
Needs Triage
labels 2023-03-15 16:12:26 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-16 07:59:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105606
There is no content yet.